manifests/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: myingress
  namespace: traefik
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "traefik-ip"
    networking.gke.io/v1beta1.FrontendConfig: "traefik-frontend-cfg"
    networking.gke.io/managed-certificates: "traefik-cert"
spec:
  backend:
    serviceName: traefik
    servicePort: 80
